app/main.css
@import-normalize;

i {
	user-select: none;
}

html, body {
	margin: 0;
	font-family: Roboto, Arial, sans-serif;
}

body {
	margin-top: 56px;
	background-color: #fafafa;
}

#nodata {
	text-align: center;
	margin: 100px 5%;
	display: none;
}

.nodata #nodata {
	display: block;
}

h2 {
	font-size: 2.5rem;
	margin: 0 0 1.5rem 0;
}

h4 {
	font-size: 2rem;
	margin: 1.5rem 0 1.5rem 0;
}

.plan h4 {
	margin: .5rem 0 .5rem 0;
}

h2, h4 {
	font-weight: 400;
}

/* IE10+ */
::-ms-clear {
	display: none;
}

.ac-s {
	overflow: hidden;
	font-size: 1rem;
	line-height: 26px;
	padding: 15px;
	border-bottom: 1px solid rgba(0, 0, 0, .3);
}

.nodata #content {
	display: none;
}

input#search {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	background-color: #43A047;
	color: white;
	fill: white;
	padding: 0 3.4rem 0 3.6rem;
	overflow: hidden;
	border: none;
	height: 56px;
	line-height: 56px;
	box-shadow: 0 0 15px 0 rgba(0, 0, 0, .5);
	transition: all 300ms;
	font-size: 1.5rem;
	-webkit-appearance: none;
	outline: none;
}

#searchicon, #back {
	left: 0;
	padding-left: 1rem;
	padding-right: 1rem;
}

#clear {
	right: 0;
	padding-right: 1rem;
	padding-left: 1rem;
}
.offline #searchicon {
	pointer-events: none;
}
.offline input#search {
	background-color: #424242;
	pointer-events: none;
}

#nodata-offline {
	display: none;
}

.typing #content,
.typing #nodata,
.typing footer,
.typing .sidebutton,
.offline #clear,
.nodata footer,
.offline #nodata-online {
	display: none;
}

.offline #nodata-offline {
	display: block;
}

input#search:focus {
	background-color: white;
	color: black;
	fill: black;
	border-bottom: 1px solid rgba(0, 0, 0, .3);
}

.typing #search {
	box-shadow: none;
}

input#search ~ i {
	fill: white;
	font-size: 2rem;
	transition: fill .2s;
	height: 56px;
	line-height: 56px;
	position: fixed;
	top: 0;
	padding: 12px;
}

input#search:focus ~ i {
	color: black;
	fill: black;
}

input#search:focus ~ #searchicon {
	display: none;
}

#back {
	display: none;
}

input#search:focus ~ #back {
	display: inline;
}


.ac-s .hl {
	color: #03a9f4;
}

.ac-s.s, .ac-s:hover {
	background-color: #eee;
}

#clear, #searchicon, #back {
	cursor: pointer;
}

#content {
	display: flex;
	flex-direction: column;
	height: 100%;
	text-align: center;
}

#content>div.plan {
	display: none;
}

#content>div.thisweek {
	display: block;
}

.today {
	background-color: grey;
}

.card {
	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
	table-layout: fixed;
}

td, th {
	text-align: center;
	padding: 5px 3px;
	width: calc(20% - 3px);
	overflow: hidden;
}

td.hour, th.hour {
	width: 15px;
}

* {
	box-sizing: border-box;
	border-collapse: collapse;
}

tr, table {
	background-color: #fff;
	margin: 0;
}

tr:nth-child(odd) {
	background-color: #f2f2f2;;
}

tr:nth-child(odd) .today {
	background-color: #CFD8DC;
}

.today {
	background-color: #ECEFF1;
}

footer {
	color: rgba(0, 0, 0, 0.6);
	text-align: center;
	width: calc(100% - 20px);
	padding: 10px;
}

#ac-ss {
	display: none;
}
.typing #ac-ss {
	display: block;
}

.strike {
	text-decoration: line-through;
}

.covered {
	background-color: #FFF59D;
}

tr:nth-child(odd) .covered {
	background-color: #FFEE58;
}

tr:nth-child(odd) .today.covered {
	background-color: #FFDD2D;
}

.today.covered {
	background-color: #FFEE58;
}


.dropped {
	background-color: #E53935;
	color: white;
}

tr:nth-child(odd) .dropped {
	background-color: #D32F2F;
}

tr:nth-child(odd) .today.dropped {
	background-color: #C62828;
}
.today.dropped {
	background-color: #D32F2F;
}


.exam {
	background-color: #1E88E5;
	color: white;
}

tr:nth-child(odd) .exam {
	background-color: #1976D2;
}

tr:nth-child(odd) .today.exam {
	background-color: #1565C0;
}
.today.exam {
	background-color: #1976D2;
}

.sidebutton {
	position: fixed;
	top: 50vh;
	margin-top: -2.5em;
	width: 5em;
	height: 5em;
	background-color: #78909C;
	color: white;
	fill: white;
	border-radius: 2.5em;
	box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.4);
	transition: box-shadow 300ms;
	cursor: pointer;
}

.sidebutton:hover {
	box-shadow: 0 0 18px 0 rgba(0, 0, 0, 0.4);
}

#lastweek {
	left: -2.5em;
}

#nextweek {
	right: -2.5em;
}

.sidebutton i {
	display: inline-block;
	padding: 1.5em;
	height: 5em;
}

#lastweek i {
	margin-left: 1.1em;
}
#nextweek i {
	margin-left: -1em;
}

a {
	color: #33691E;
	text-decoration: #8BC34A;
}

@media (min-width: 601px) {
	body {
		margin-top: 64px;
	}
	h2 {
		font-size: 3.5rem;
	}
	input#search ~ i {
		padding: 15px;
	}
	input#search, input#search ~ i, .ac-s {
		height: 64px;
		line-height: 64px;
	}
	.ac-s {
		padding: 0 3.4rem 0 3.6rem;
		font-size: 1.5rem;
	}
	td, th {
		padding: 15px 5px;
	}
	.card {
		box-shadow: 0 3px 10px 0 rgba(0, 0, 0, .4);
		border-radius: 3px;
		margin: 30px 30px 0 30px;
		border: none;
		width: 90vw;
		max-width: 1600px;
	}
	#content {
		align-items: center;
		justify-content: space-between;
	}
	footer {
		margin: 30px;
	}
	td {
		width: calc(20% - 6px);
	}
	
	td.hour, th.hour {
		width: 30px;
	}
	.plan h4 {
		margin: 1rem 0 1rem 0;
	}
}

